--- a/jupyter_russian/assignments_demo/assignment01_adult_pandas.ipynb
+++ b/jupyter_russian/assignments_demo/assignment01_adult_pandas.ipynb
@@ -237,13 +237,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Male      21790\n",
+       "Female    10771\n",
+       "Name: sex, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "# Ваш код здесь\n",
+    "data['sex'].value_counts()"
    ]
   },
   {
@@ -255,13 +267,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36.85823043357163"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "# Ваш код здесь\n",
+    "data[data.sex == 'Female'].age.mean()"
    ]
   },
   {
@@ -273,13 +295,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004207487485028101"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "# Ваш код здесь\n",
+    "data['native-country']\\\n",
+    "    .value_counts(normalize = True)\\\n",
+    "    .loc['Germany']"
    ]
   },
   {
@@ -291,13 +325,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>salary</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;=50K</th>\n",
+       "      <td>36.783738</td>\n",
+       "      <td>14.020088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>&gt;50K</th>\n",
+       "      <td>44.249841</td>\n",
+       "      <td>10.519028</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             mean        std\n",
+       "salary                      \n",
+       "<=50K   36.783738  14.020088\n",
+       ">50K    44.249841  10.519028"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "# Ваш код здесь\n",
+    "data.groupby(by = 'salary')['age'].agg(['mean', 'std'])"
    ]
   },
   {
@@ -309,13 +399,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "# Ваш код здесь\n",
+    "data_edu = list(data[data['salary'] == '>50K']['education'].unique())\n",
+    "edu_test = ['Bachelors', 'Prof-school', 'Assoc-acdm', 'Assoc-voc', 'Masters', 'Doctorate']\n",
+    "data_edu == edu_test"
    ]
   },
   {
@@ -327,13 +429,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>race</th>\n",
+       "      <th>sex</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Amer-Indian-Eskimo</th>\n",
+       "      <th>Female</th>\n",
+       "      <td>119.0</td>\n",
+       "      <td>37.117647</td>\n",
+       "      <td>13.114991</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>46.00</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>192.0</td>\n",
+       "      <td>37.208333</td>\n",
+       "      <td>12.049563</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>45.00</td>\n",
+       "      <td>82.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Asian-Pac-Islander</th>\n",
+       "      <th>Female</th>\n",
+       "      <td>346.0</td>\n",
+       "      <td>35.089595</td>\n",
+       "      <td>12.300845</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>43.75</td>\n",
+       "      <td>75.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>693.0</td>\n",
+       "      <td>39.073593</td>\n",
+       "      <td>12.883944</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>46.00</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Black</th>\n",
+       "      <th>Female</th>\n",
+       "      <td>1555.0</td>\n",
+       "      <td>37.854019</td>\n",
+       "      <td>12.637197</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>46.00</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>1569.0</td>\n",
+       "      <td>37.682600</td>\n",
+       "      <td>12.882612</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>46.00</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Other</th>\n",
+       "      <th>Female</th>\n",
+       "      <td>109.0</td>\n",
+       "      <td>31.678899</td>\n",
+       "      <td>11.631599</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>39.00</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>162.0</td>\n",
+       "      <td>34.654321</td>\n",
+       "      <td>11.355531</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>42.00</td>\n",
+       "      <td>77.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">White</th>\n",
+       "      <th>Female</th>\n",
+       "      <td>8642.0</td>\n",
+       "      <td>36.811618</td>\n",
+       "      <td>14.329093</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>46.00</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>19174.0</td>\n",
+       "      <td>39.652498</td>\n",
+       "      <td>13.436029</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>49.00</td>\n",
+       "      <td>90.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             count       mean        std   min   25%   50%  \\\n",
+       "race               sex                                                       \n",
+       "Amer-Indian-Eskimo Female    119.0  37.117647  13.114991  17.0  27.0  36.0   \n",
+       "                   Male      192.0  37.208333  12.049563  17.0  28.0  35.0   \n",
+       "Asian-Pac-Islander Female    346.0  35.089595  12.300845  17.0  25.0  33.0   \n",
+       "                   Male      693.0  39.073593  12.883944  18.0  29.0  37.0   \n",
+       "Black              Female   1555.0  37.854019  12.637197  17.0  28.0  37.0   \n",
+       "                   Male     1569.0  37.682600  12.882612  17.0  27.0  36.0   \n",
+       "Other              Female    109.0  31.678899  11.631599  17.0  23.0  29.0   \n",
+       "                   Male      162.0  34.654321  11.355531  17.0  26.0  32.0   \n",
+       "White              Female   8642.0  36.811618  14.329093  17.0  25.0  35.0   \n",
+       "                   Male    19174.0  39.652498  13.436029  17.0  29.0  38.0   \n",
+       "\n",
+       "                             75%   max  \n",
+       "race               sex                  \n",
+       "Amer-Indian-Eskimo Female  46.00  80.0  \n",
+       "                   Male    45.00  82.0  \n",
+       "Asian-Pac-Islander Female  43.75  75.0  \n",
+       "                   Male    46.00  90.0  \n",
+       "Black              Female  46.00  90.0  \n",
+       "                   Male    46.00  90.0  \n",
+       "Other              Female  39.00  74.0  \n",
+       "                   Male    42.00  77.0  \n",
+       "White              Female  46.00  90.0  \n",
+       "                   Male    49.00  90.0  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "# Ваш код здесь\n",
+    "data.groupby(by =['race', 'sex'])['age'].describe()"
    ]
   },
   {
@@ -345,13 +643,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True     0.859074\n",
+       "False    0.140926\n",
+       "Name: marital_status_bool, dtype: float64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "# Ваш код здесь\n",
+    "data['marital_status_bool'] = data['marital-status'].apply(lambda x: x[0] == 'M')\n",
+    "data[data['salary'] == '>50K']['marital_status_bool'].value_counts(normalize = True)"
    ]
   },
   {
@@ -363,13 +674,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "85"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<=50K    0.705882\n",
+       ">50K     0.294118\n",
+       "Name: salary, dtype: float64"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "# Ваш код здесь\n",
+    "display(data['hours-per-week'].max())\n",
+    "display(data[(data['hours-per-week'] == data['hours-per-week'].max())].age.count())\n",
+    "data[(data['hours-per-week'] == data['hours-per-week'].max())]\\\n",
+    "    .salary.value_counts(normalize = True)"
    ]
   },
   {
@@ -381,14 +725,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "salary\n",
+       "<=50K    41.000000\n",
+       ">50K     47.958333\n",
+       "Name: hours-per-week, dtype: float64"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Ваш код здесь"
+    "# Ваш код здесь\n",
+    "data.groupby(['native-country', 'salary'])['hours-per-week'].mean().loc['Japan']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
